--- a/exp15.html
+++ b/exp15.html
@@ -23,7 +23,7 @@
     </script>
 </head>
 <body>
-    <div>
+    <div id="mydiv">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore sed impedit provident delectus sit ex veritatis autem amet, ratione quo quae ullam exercitationem fugiat in quis distinctio eveniet repellat excepturi. Reiciendis porro aut dolore nam numquam incidunt alias beatae saepe! Consequuntur a modi sequi rerum accusantium aperiam nulla necessitatibus id nobis. Consequatur amet natus nam nisi sunt omnis officia! Harum repellendus architecto cumque tenetur quas, similique ea placeat modi, nisi velit alias maxime neque laboriosam eius numquam sint ratione natus soluta sunt. Velit, numquam explicabo optio consequatur dolores non qui, placeat neque voluptates harum nisi beatae amet, quis ab ex?
     </div>
   
