exam_practice_added

--- a/exp10.html
+++ b/exp10.html
@@ -65,8 +65,9 @@
 
        const deleteCookie = (key) =>{
             let date = new Date();
-            let exp = date.setMonth(date.getMonth()-1);
-            document.cookie = `${key}=; max-age=0`;
+            date.setMonth(date.getMonth()-1)
+            let exp = date.toUTCString();
+            document.cookie = `${key}=; expires=${exp}`;
             alert(key+" is deleted.");
        }
 
