--- a/exp3.html
+++ b/exp3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        let arr = Array();
+        let arr = new Array();
 
         <!-- insert values in arrays -->
         
